--- a/11_EventTrans.html
+++ b/11_EventTrans.html
@@ -25,8 +25,8 @@
 			rect.style.borderRadius = "50%"; 
 		});
 		addEventListener("mouseout", function() { 
-			rect.style.backgroundColor = "#fff"; 
-			rect.style.borderRadius = "0";  
+			rect.style.backgroundColor = ""; 
+			rect.style.borderRadius = "";  
 		});
 	</script>
 </body>
